GQL-6 fix: add z-index to notofocations

--- a/src/components/ui/Notification/notification.module.scss
+++ b/src/components/ui/Notification/notification.module.scss
@@ -5,6 +5,7 @@
   position: absolute;
   top: 2.5rem;
   right: 0.5rem;
+  z-index: 1000;
   display: flex;
   align-items: center;
   gap: 1rem;
